--- a/src/layouts/components/SideBar/SuggestsGroup/SuggestsGroup.module.scss
+++ b/src/layouts/components/SideBar/SuggestsGroup/SuggestsGroup.module.scss
@@ -1,28 +1,28 @@
-.menu-item {
+.wrapper {
     display: flex;
     align-items: center;
-    color: var(--text-color);
-    padding: 6px 0 6px 10px;
+    height: 50px;
+    overflow-y: auto;
+    margin-right: 8px;
 
     &:hover {
         background-color: rgba(255, 255, 255, 0.1);
         border-radius: 6px;
+        cursor: pointer;
     }
 }
 
-.icon {
-    display: flex;
-    align-items: center;
+.avatar {
+    margin-left: 10px;
     width: 36px;
     height: 36px;
-    margin-left: 10px;
+    border-radius: 4px;
 }
 
-.title {
-    display: flex;
-    align-items: center;
+.name {
     font-size: 15px;
     font-weight: 500;
     line-height: 20px;
-    margin-left: 12px;
+    color: #e4e6eb;
+    margin-left: 22px;
 }
